Fix modal spacing

--- a/frontend/src/css/components/comment_item.scss
+++ b/frontend/src/css/components/comment_item.scss
@@ -50,7 +50,7 @@
 
             .comment-options {
                 position: absolute;
-                top: 15px;
+                top: 2px;
                 right: 5px;
                 cursor: pointer;
 
@@ -70,13 +70,13 @@
 
                     .icon:nth-child(1){
                         position: absolute;
-                        top: -47px;
+                        bottom: 2px;
                         right: 82px;
                     }
 
                     .icon:nth-child(2){
                         position: absolute;
-                        top: -47px;
+                        bottom: 2px;
                         right: 34px;
                     }
 
